feat: add pagination and DTO mapping for projects